--- a/Modeling-Simple.ipynb
+++ b/Modeling-Simple.ipynb
@@ -16163,24 +16163,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-6.637166973475328\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_pred = arrival_xgb.predict(X_test)\n",
-    "print(explained_variance_score(y_pred,y_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 140,
    "metadata": {},
    "outputs": [
@@ -16198,6 +16180,27 @@
     "import math\n",
     "print(mean_squared_error(y_test, y_pred))\n",
     "print(math.sqrt(mean_squared_error(y_test, y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15751339903111516"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "r2_score(y_test, y_pred)"
    ]
   },
   {
@@ -17914,7 +17917,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df.to_csv('predicted_test.csv',index=False)"
+    "test_df.to_csv('Arnav_.csv',index=False)"
    ]
   },
   {
